# my_first_burn_model

./: .gitignore  Cargo.toml
src/: main.rs
src/model/: mod.rs
src/training/: mod.rs
