[package]
name = "my_first_burn_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# burn = { version = "0.12.1", features = ["wgpu", "train", "vision"] }
burn = { path = "../burn/crates/burn", features = ["wgpu", "train", "vision"]}
image = "0.25.1"
serde = { features = ["std", "derive"]}
